--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.2",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "caffeinated/shinobi": "^3.3",
         "fideloper/proxy": "^4.0",
         "kylekatarnls/laravel-carbon-2": "^1.0.0",
